website/versioned_docs/version-1.9.0/References.md
---
title:  Scientific References
---


This page contains a subset of the scientific papers that have been written either about GAMA or using the platform as an experimental/modeling support.

If you happen to publish a paper that uses or discusses GAMA, please let us know, so that we can include it in this list.

As stated in [the first page](Overview), if you need to cite GAMA in a paper, we kindly ask you to use this reference:

* [Taillandier, P., Gaudou, P. Grignard, A. Huynh, Q.N., Marilleau, N., Caillou, P., Philippon, D., Drogoul, A. (2018) Building, Composing and Experimenting Complex Spatial Models with the GAMA Platform. GeoInformatica, Dec. 2018. https://doi.org/10.1007/s10707-018-00339-6.](https://link.springer.com/article/10.1007/s10707-018-00339-6)

## Table of Contents
* [Papers about GAMA](#papers-about-gama)
* [HDR theses](#hdr-theses)
* [PhD theses](#phd-theses)
* [PhD theses that use GAMA as modeling/simulation support](#phd-theses-that-use-gama-as-modelingsimulation-support)
* [Master theses that use GAMA as modeling/simulation support](#master-theses-that-use-gama-as-modelingsimulation-support)
* [Research papers that use GAMA as modeling/simulation support](#research-papers-that-use-gama-as-modelingsimulation-support)


## Papers about GAMA

* [Taillandier, P., Grignard, A., Marilleau, N., Philippon, D., Huynh Q.N., Gaudou, B., Drogoul, A. (2019) "Participatory Modeling and Simulation with the GAMA Platform". Journal of Artificial Societies and Social Simulation 22 (2), 1-3. DOI: 10.18564/jasss.3964](http://jasss.soc.surrey.ac.uk/22/2/3.html)
* [Caillou, P., Gaudou, B., Grignard, A., Truong, C.Q., Taillandier, P. (2017) A Simple-to-Use BDI Architecture for Agent-Based Modeling and Simulation, in: Advances in Social Simulation 2015. Springer, Cham, pp. 15–28. doi:10.1007/978-3-319-47253-9_2](https://link.springer.com/chapter/10.1007/978-3-319-47253-9_2)
* [Chapuis, K., Taillandier, P., Renaud, M., Drogoul, A. (2018) "Gen*: a generic toolkit to generate spatially explicit synthetic populations". International Journal of Geographical Information Science 32 (6), 1194-1210](https://www.tandfonline.com/doi/full/10.1080/13658816.2018.1440563)
* [Taillandier, Patrick, Arnaud Grignard, Benoit Gaudou, and Alexis Drogoul. "Des données géographiques à la simulation à base d’agents: application de la plate-forme GAMA." Cybergeo: European Journal of Geography (2014).](https://journals.openedition.org/cybergeo/26263)
* [Grignard, A., Taillandier, P., Gaudou, B., Vo, D-A., Huynh, Q.N., Drogoul, A. (2013) GAMA 1.6: Advancing the Art of Complex Agent-Based Modeling and Simulation. In ‘PRIMA 2013: Principles and Practice of Multi-Agent Systems', Lecture Notes in Computer Science, Vol. 8291, Springer, pp. 117-131.](http://link.springer.com/chapter/10.1007/978-3-642-44927-7_9)
* [Grignard, A., Drogoul, A., Zucker,  J.D. (2013) Online analysis and visualization of agent based models, Computational Science and Its Applications–ICCSA 2013. Springer Berlin Heidelberg, 2013. 662-672.](http://link.springer.com/chapter/10.1007/978-3-642-39637-3_52#page-1) 
* [Taillandier, P., Drogoul, A., Vo, D.A. and Amouroux, E. (2012) GAMA: a simulation platform that integrates geographical information data, agent-based modeling and multi-scale control, in 'The 13th International Conference on Principles and Practices in Multi-Agent Systems (PRIMA)', India, Volume 7057/2012, pp 242-258.](http://www.springerlink.com/content/j7135j8722742j82/)
* [Taillandier, P., Drogoul, A. (2011) From Grid Environment to Geographic Vector Agents, Modeling with the GAMA simulation platform. In ‘25th Conference of the International Cartographic Association’, Paris, France.](https://icaci.org/files/documents/ICC_proceedings/ICC2011/Oral%20Presentations%20PDF/C4-Simulation,%20spatio-temporal%20modelling,%20visualisation/CO-288.pdf)
* [Taillandier, P., Drogoul A., Vo D.A., Amouroux, E. (2010) GAMA : bringing GIS and multi-level capabilities to multi-agent simulation, in 'the 8th European Workshop on Multi-Agent Systems', Paris, France.](http://www.documentation.ird.fr/hor/fdi:010055255)
* [Amouroux, E., Taillandier, P. &  Drogoul, A. (2010) Complex environment representation in epidemiology ABM: application on `H5N1` propagation. In ‘the 3rd International Conference on Theories and Applications of Computer Science’ (ICTACS'10).](vjs.ac.vn/index.php/jst/article/download/1154/1464)
* [Amouroux, E., Chu, T.Q., Boucher, A. and Drogoul, A. (2007) GAMA: an environment for implementing and running spatially explicit multi-agent simulations. In ‘Pacific Rim International Workshop on Multi-Agents', Bangkok, Thailand, pp. 359--371.](http://www.springerlink.com/content/88006131542n1204/)

## HDR theses

* **Patrick Taillandier**, ["Vers une meilleure intégration des dimensions spatiales, comportementales et participatives en simulation à base d'agents"](http://publications.ut-capitole.fr/32596/1/HDR_TaillandierPatrick_2019.pdf), University Toulouse 1 Capitole, France 2019.
* **Benoit Gaudou**, ["Toward complex models of complex systems - One step further in the art of Agent-Based Modelling"](https://www.researchgate.net/profile/Benoit_Gaudou/publication/312383963_Toward_complex_models_of_complex_systems_-_One_step_further_in_the_art_of_Agent-Based_Modelling/links/587cd54a08ae4445c06b2b7b.pdf), University Toulouse 1 Capitole, France 2016.
* **Nicolas Marilleau**, ["Distributed Approaches based on Agent Based Systems to model and simulate complex systems with a space"](https://hal.inria.fr/UMMISCO/tel-01428319v1), Pierre and Marie Curie University, Paris, France 2016.


## PhD theses

* **Mathieu Bourgais**, ["Vers des agents cognitifs, affectifs et sociaux dans la simulation"](https://tel.archives-ouvertes.fr/tel-01959903), Normandie Université, defended November 30th, 2018.
* **Huynh Quang Nghi**, ["CoModels, engineering dynamic compositions of coupled models to support the simulation of complex systems"](https://tel.archives-ouvertes.fr/tel-01544874/document), University of Paris 6, defended December 5th, 2016.
* **Truong Chi Quang**, ["Integrating cognitive models of human decision-makingin agent-based models : an application to land useplanning under climate change in the Mekong river delta"](https://tel.archives-ouvertes.fr/tel-01543066/document), University of Paris 6 & Can Tho University, defended December 7th, 2016.
* **Arnaud Grignard**, ["Modèles de visualisation à base d'agents"](https://tel.archives-ouvertes.fr/tel-01544874/document), University of Paris 6, defended October 2nd, 2015.
* **Truong Minh Thai**, ["To Develop a Database Management Tool for Multi-Agent Simulation Platform"](http://www.theses.fr/2015TOU10003), 'Université Toulouse 1 Capitole, defended February 11th, 2015.
* **Truong Xuan Viet**, ["Optimization by Simulation of an Environmental Surveillance Network: Application to the Fight against Rice Pests in the Mekong Delta (Vietnam)"](https://drive.google.com/a/ctu.edu.vn/file/d/0B7ArAu2_CEjCaTVzZURNUGlfWmc/edit?usp=sharing), University of Paris 6 & Ho Chi Minh University of Technology, defended June 24th, 2014.
* **Nguyen Nhi Gia Vinh**, ["Designing multi-scale models to support environmental decision: application to the control of Brown Plant Hopper invasions in the Mekong Delta (Vietnam)"](https://drive.google.com/file/d/0BwzSY8KTNM0nLUVMVXR3WDVJSjQ/edit?usp=sharing), University of Paris 6, defended Oct. 31st, 2013.
* **Vo Duc An**, ["An operational architecture to handle multiple levels of representation in agent-based models"](https://dl.dropboxusercontent.com/u/70529600/manuscrit_VoDucAn.pdf), University of Paris 6, defended Nov. 30th 2012.
* **Edouard Amouroux**, ["KIMONO: a descriptive agent-based modeling methodology for the exploration of complex systems: an application to epidemiology"](http://tel.archives-ouvertes.fr/tel-00630779), University of Paris 6, defended Sept. 30th, 2011.
* **Chu Thanh Quang**, ["Using agent-based models and machine learning to enhance spatial decision support systems: Application to resource allocation in situations of urban catastrophes"](https://www.dropbox.com/s/i5ifnigqv7qltc9/CHU-Thanh-Quang_manuscrit.pdf), University of Paris 6, defended July 1st, 2011.
* **Nguyen Ngoc Doanh**, ["Coupling Equation-Based and Individual-Based Models in the Study of Complex Systems: A Case Study in Theoretical Population Ecology"](https://docs.google.com/file/d/0B5s1B4Qq19ycMDg4MTNhMmUtMDNlMC00NzQyLWFlZjEtMjZhOGY5YjRhNWU5/edit?hl=fr), University of Paris 6, defended Dec. 14th, 2010.


## PhD theses that use GAMA as modeling/simulation support
* **Debjit Bhowmick**, ["Walk-sharing-A smarter way to improve pedestrian safety and safety perception in urban spaces"](https://publikationen.bibliothek.kit.edu/1000150400/149297946), The University of Melbourne and Karlsruhe Institute of Technology, defended April, 2022.
* **Robin Cura**, ["Modéliser des systèmes de peuplement en interdisciplinarité. Co-construction et exploration visuelle d'un modèle de simulation"](https://tel.archives-ouvertes.fr/tel-02944405/document), Université Paris 1 Panthéon-Sorbonne, defended March 6th, 2020.
* **Alice Micolier**, ["Development of a methodology for a consistent and integrated evaluation of the health, energy and environmental performance of residential building design solutions"](https://tel.archives-ouvertes.fr/tel-03060399/document), Université de Bordeaux, defended December 13th,2019.
* **Dimitrios Panagiotis Chapizanis**, ["Exposomic analysis: emerging methodologies for environmental exposure measurements"](https://www.didaktorika.gr/eadd/handle/10442/45788?locale=en), Aristotle University of Thessaloniki, 2019.
* **Julius Bañgate**, ["Multi-Agent Modelling of seismic crisis"](https://www.researchgate.net/publication/341525622_Multi-agent_modelling_of_seismic_crisis), Université Grenoble Alpes, defended December 18th, 2019.
* **Johan Arcile**, ["Conception, modélisation et vérification formelle d’un système temps-réel d’agents coopératifs Application aux véhicules autonomes communicants"](https://www.biblio.univ-evry.fr/theses/2019/2019SACLE029.pdf), Université Paris-Saclay, defended December 13th, 2019.
* **Mélodie DUBOIS**, ["Effets combinés de la pêche et des perturbations naturelles sur la dynamique des écosystèmes coralliens"](https://tel.archives-ouvertes.fr/tel-02873651/), Université de recherche Paris Sciences et Lettres, defended Mai  24th, 2019.
* **Allan Lao**, ["Agent-Based Mesoscopic Pedestrian Modeling and Simulation"](https://www.researchgate.net/publication/337889032_Agent_Based_Mesoscopic_Pedestrian_Modeling_and_Simulation?fbclid=IwAR0TpRdp_NjSmOGggOjnJmVpsmFx2gh8bwRSXzgUpHHYdPBBdvCYal9cO7k), University of the Cordilleras, defended in February, 2019.
* **Jérémy Sobieraj**, [Méthodes et outils pour la conception de Systèmes de Transport Intelligents Coopératifs](https://hal.archives-ouvertes.fr/tel-02042591/), Université Paris-Saclay; Université d’Evry-Val-d’Essonne, defended November 7th, 2018.
* **Myriam Grillot**, [Modélisation multi-agents et pluri-niveaux de la réorganisation du cycle de l’azote dans des systèmes agro-sylvo-pastoraux en transition : Le cas du bassin arachidier au Sénégal](https://hal.inrae.fr/tel-02917359), IRD, defended March 16th, 2018.
* **Mahefa Rakotoarisoa**, [Les risques hydrologiques dans les bassins versants sous contrôle anthropique : modélisation de l'aléa, de la vulnérabilité et des conséquences sur les sociétés. : Cas de la région Sud-ouest de Madagascar](https://tel.archives-ouvertes.fr/tel-02066645/document), Univeristé d'Angers et Université de Tuléa, defended in December, 2017.
* **Justin Emery**, [La ville sous électrodes : de la mesure à l'évaluation de la pollution atmosphérique automobile. : vers une simulation multi-agents du trafic routier en milieu urbain](https://tel.archives-ouvertes.fr/tel-01436123v2), Université de Bourgogne-Franche-Comté, defended December 16th, 2016.
* **Hugo Thierry**, ["Élaboration d'un modèle spatialisé pour favoriser le contrôle biologique de ravageurs de cultures par gestion du paysage agricole"](https://oatao.univ-toulouse.fr/14665/1/thierry.pdf), INPT, defended November 11th, 2015. 
* **Inès Hassoumi**, [Approche multi-agents de couplage de modèles pour la modélisation des systèmes complexes spatiaux. Application à l'aménagement urbain de la ville de Métouia](https://tel.archives-ouvertes.fr/tel-01212713/document), Université Pierre et Marie Curie – Paris VI et université de Tunis, defended December, 2014.

## Master theses that use GAMA as modeling/simulation support

* [Booms, C., "Overcrowded Dutch natural areas: an agent-based exploration of visitor conflicts", Master's thesis, Utrecht University, 2022.](https://studenttheses.uu.nl/handle/20.500.12932/367)
* [Pellegrino, M., "Evaluation and comparison of calibration techniques for urban mobility behaviour ABM", Master's thesis, Utrecht University, 2022.](https://studenttheses.uu.nl/handle/20.500.12932/41471)
* [Claerhoudt, X. "How opinion leaders can manipulate opinion dynamics in hierarchical social networks", Master's thesis, Ghent University, 2020.](https://libstore.ugent.be/fulltxt/RUG01/002/945/717/RUG01-002945717_2021_0001_AC.pdf)
* [Doelman, V. J. "An agent-based approach to the assessment of carrying capacity in Amsterdam", Master's thesis, GIMA program, Utrecht University, 2020.](https://dspace.library.uu.nl/bitstream/handle/1874/399964/Thesis_Vince_Doelman.pdf)
* [de Maat, N.B., 2020. "Improving traffic system performance by combining tolling and intention-based prediction: an agent-based model", Master's thesis, GIMA program, Utrecht University, 2020.](http://dspace.library.uu.nl/bitstream/handle/1874/399960/Nino_de_Maat_final_thesis.pdf)

## Research papers that use GAMA as modeling/simulation support

### 2023 

* [Truong, Q. C., Drogoul, A., Gaudou, B., Taillandier, P., Huynh, N. Q., Nguyen, T. H., ... & Espagne, E. (2023). An Agent-Based Model for Land-Use Change Adaptation Strategies in the Context of Climate Change and Land Subsidence in the Mekong Delta. Sustainability, 15(6), 5355.](https://www.mdpi.com/2071-1050/15/6/5355)
* [Perrette, B., Cruz, C., Cherifi, H. A local Agent-Based Model of COVID-19 spreading and interventions. French Regional Conference on Complex Systems, CSS France, May 2023, Le Havre, France.](https://hal.science/hal-04055099/document)
* [Wang, R., Zhao, D., & Min, B. C. (2023). Initial Task Allocation for Multi-Human Multi-Robot Teams with Attention-based Deep Reinforcement Learning. arXiv preprint arXiv:2303.02486.](https://arxiv.org/pdf/2303.02486.pdf)
* [Saval, A., Minh, D. P., Chapuis, K., Tranouez, P., Caron, C., Daudé, É., & Taillandier, P. (2023). Dealing with mixed and non-normative traffic. An agent-based simulation with the GAMA platform. Plos one, 18(3), e0281658.](https://doi.org/10.1371/journal.pone.0281658)
* [Cao, Z., He, G., Mu, S., & Qu, H. (2023). Effects of Bee Density and Hive Distribution on Pollination Efficiency for Greenhouse Strawberries: A Simulation Study. Agronomy, 13(3), 731.](https://www.mdpi.com/2073-4395/13/3/731)
* [Arnejo, Z., Barua, L., Ramirez, P. J., Tiburan, C., & Bantayan, N. (2023). An Agent-Based Model of a Sustainable Forest Operation in a Theoretical Lowland Dipterocarp Forest Modeled after Mount Makiling Forest Reserve, Philippines. Forests, 14(2), 428.](https://www.mdpi.com/1999-4907/14/2/428)
* [Novoa, D., Reyes-Silva, J. D., Helm, B., & Krebs, P. (2023). Development and Demonstration of an Interactive Tool in an Agent-Based Model for Assessing Pluvial Urban Flooding. Water, 15(4), 696.](https://www.mdpi.com/2073-4441/15/4/696)
* [Soutif-Bellenger, M., Thirel, G., Therond, O., & Villerd, J. (2023). As simple as possible but not simpler?: the case of irrigation modeling at catchment scale in southwestern France. Irrigation Science, 1-24.](https://doi.org/10.1007/s00271-023-00846-x)
* [Medaglia, A., Wilches-Mogollon, M., Sarmiento, O., Montes, F., Guzman, L., Sanchez-Silva, M., ... & Salamanca, L. (2023). Towards intelligent dynamics of an active transport system for biking. Safer Complex Systems Case Studies](https://engineeringx.raeng.org.uk/media/l3pjaya2/engx-towards-intelligent-dynamics-of-an-active-transport-system-for-biking-short.pdf)
* [Braz, L.F., Bachert, C.M.D.A., Sichman, J.S. (2023). Simulating Work Teams Using MBTI Agents. In: Lorig, F., Norling, E. (eds) Multi-Agent-Based Simulation XXIII. MABS 2022. Lecture Notes in Computer Science(), vol 13743. Springer, Cham.](https://doi.org/10.1007/978-3-031-22947-3_5)
* [Majic, I., Scholz, J., Bulbul, R., & Wallinger, S. (2023). Tourist Flow Simulation in GAMA Using Historical Data Parameters. In ENTER22 e-Tourism Conference (pp. 255-260). Springer, Cham.](https://link.springer.com/chapter/10.1007/978-3-031-25752-0_27)
* [Adam, C., Bailly, C., & Dugdale, J. (2023). Communication during bushfires, towards a serious game for a serious matter: communication during bushfires. In Research Anthology on Managing Crisis and Risk Communications (pp. 100-130). IGI Global.](https://www.igi-global.com/chapter/communication-during-bushfires-towards-a-serious-game-for-a-serious-matter/309891)
* [da Silva Leitzke, B., & Adamatti, D. F. (2023). Land Use Management Using Multi-Agent Based Simulation in a Watershed in South of the Brazil. In International Workshop on Multi-Agent Systems and Agent-Based Simulation (pp. 1-15). Springer, Cham.](https://link.springer.com/chapter/10.1007/978-3-031-22947-3_1)

### 2022

* [Ngo, H. N., Kaddoum, E., Gleizes, M. P., Bonnet, J., & Anaïs, G. (2022, May). P-ADRIP: A multi-agent-based system for traffic forecasting. In 14th ITS European Congress Toulouse: Smart and Sustainable Mobility for all (2022).](https://hal.science/hal-03764691/)
* [Ngo, H. N., Kaddoum, E., Gleizes, M. P., Bonnet, J., & Anaïs, G. (2022, June). P-ADRIP: un système multi-agent auto-organisateur pour la prévision du trafic routier. In Journées Francophones sur les Systèmes Multi-Agents: SMA et Smart Cities (JFSMA 2022).](https://hal.science/hal-03764716/)
* [Furger, F., Bernon, C., Georgé, J. P., Pigenet, N., & Valiere, P. (2022, October). Multi-agent-based Structural Reconstruction of Dynamic Topologies for Urban Lighting. In Advances in Practical Applications of Agents, Multi-Agent Systems, and Complex Systems Simulation. The PAAMS Collection: 20th International Conference, PAAMS 2022, L'Aquila, Italy, July 13–15, 2022, Proceedings (pp. 191-202). Cham: Springer International Publishing.](https://ut3-toulouseinp.hal.science/hal-03894080/document)
* [Cao, Z., & Qu, H. (2022). Simulation-based Modelling of Growth and Pollination of Greenhouse Strawberry. arXiv preprint arXiv:2210.14522.](https://arxiv.org/abs/2210.14522)
* [Tribouillois, H., Constantin, J., Casal, L., Villerd, J., & Therond, O. (2022). Introducing and expanding cover crops at the watershed scale: Impact on water flows. Agriculture, Ecosystems & Environment, 337, 108050.](https://doi.org/10.1016/j.agee.2022.108050)
* [Tribouillois, H., Constantin, J., Murgue, C., Villerd, J., & Therond, O. (2022). Integrated modeling of crop and water management at the watershed scale: Optimizing irrigation and modifying crop succession. European Journal of Agronomy, 140, 126592.](https://doi.org/10.1016/j.eja.2022.126592)
* [Behadili, S. F., Al-Barrak, A., & Abd, M. S. (2022). Gama Platform Survey for Agent-Based Modelling. 3rd AI-Noor International Conference for Science and Technology ](https://www.researchgate.net/profile/Suhad-Faisal-3/publication/353886105_Gama_Platform_Survey_for_Agent-Based_Modelling/links/61e898df8d338833e37f91b2/Gama-Platform-Survey-for-Agent-Based-Modelling.pdf)
* [Ait Amokhtar, S., & El Saadi, N. (2022). On the industrial clustering: a view from an agent-based version of Krugman model. In Congress on Intelligent Systems (pp. 653-675). Springer, Singapore.](https://link.springer.com/chapter/10.1007/978-981-16-9416-5_48)
* [Xu, B. (2022). ASIR: Robust Agent-based Representation Of SIR Model. arXiv preprint arXiv:2209.08214.](https://arxiv.org/pdf/2209.08214.pdf)
* [Laatabi, A., Gaudou, B., Hanachi, C., Stolf, P., & Truptil, S. (2022). Coupling agent-based simulation with optimization to enhance population sheltering. In 19th Information Systems for Crisis Response and Management Conference (ISCRAM 2022) (pp. à-paraître).](https://ut3-toulouseinp.hal.science/hal-03633634/)
* [Tsagkis, P. Urban growth models and calibration methods: a case study of Athens, Greece. Bulletin of Geography. Socio-economic Series [online]. 11 March 2022, nr 55, s. 107–121.](https://apcz.umk.pl/BGSS/article/view/34408)
* [Grignard, A., Nguyen-Huu, T., Taillandier, P., Alonso, L., Ayoub, N., Elkatsha, M., ... & Larson, K. (2021, May). Using agent-based modelling to understand advantageous behaviours against COVID-19 transmission in the built environment. In International Workshop on Multi-Agent Systems and Agent-Based Simulation (pp. 86-98). Springer, Cham.](https://www.springerprofessional.de/en/using-agent-based-modelling-to-understand-advantageous-behaviour/20035612)
* [Ribeiro-Rodrigues, E., & Bortoleto, A. P. (2022). Analyzing waste prevention behaviors by applying an ABMS framework. Detritus - Volume 21 Pages 3-16](https://doi.org/10.31025/2611-4135/2022.17226)
* [Sadou, L., Couture, S., Thomopoulos, R., & Taillandier, P. (2022). Better Representing the Diffusion of Innovation Through the Theory of Planned Behavior and Formal Argumentation. In Advances in Social Simulation (pp. 423-435). Springer, Cham.](https://link.springer.com/chapter/10.1007/978-3-030-92843-8_32)
* [Cantizano, A., Caro, R., Fernández, M., & Ayala, P. (2022). Human factors in the model of urban fire spread in Madrid (Spain) focused on the poor population. Sustainability, 14(8), 4486.](https://www.mdpi.com/2071-1050/14/8/4486)
* [Doussin, B., Verstaevel, N., Gaudou, B., Kaddoum, E., & Amblard, F. (2022). Une Simulation Multi-Agent Basée sur l'Affordance pour Contraindre l'Emergence. In Rencontres des Jeunes Chercheurs en Intelligence Artificielle (RJCIA 2022).](https://ut3-toulouseinp.hal.science/hal-03725040/)
* [Haddad, H., Bouyahia, Z., Jabeur, N., & Yasar, A. U. H. (2022). Socially Structured Vanpooling: A Case Study in Salalah, Oman. IEEE Intelligent Transportation Systems Magazine, 14(1).](https://ieeexplore.ieee.org/document/9085331)
* [Dinaharison, J. B., Marilleau, N., Rakotonirainy, H., Corson, N., Bernard, L., & Müller, J. P. (2022). Agent-based Spatial Model Coupling Using a Coordination Unit.](https://ceur-ws.org/Vol-3261/paper13.pdf)
* [Adam, C., & Taillandier, F. (2022). Un jeu sérieux pour sensibiliser aux enjeux d’une mobilité urbaine durable. Academic Journal of Civil Engineering, 40(1), 29-32.](https://doi.org/10.26168/ajce.40.1.8)
* [Adam, C., Jacquier, A., & Taillandier, F. (2022). Simulation à base d’agents de stratégies urbaines pour une mobilité plus durable. Academic Journal of Civil Engineering, 40(1), 33-36.](https://doi.org/10.26168/ajce.40.1.9)
* [Moatty, A., & Sfiligoï Taillandier, F. (2022). Un jeu sérieux fondé sur un modèle Agent pour sensibiliser aux Solutions fondées sur la Nature pour gérer les inondations. Academic Journal of Civil Engineering, 40(1), 1-4.](https://doi.org/10.26168/ajce.40.1.1)
* [Kevin, C., Isabelle, R., Alexis, D., Trang, N. T. T., Benoit, G., & Dũng, T. N. T. Vulnerability to Natural Disasters: Protection Behaviors and Evacuation Management in Case of Rapid Flooding, 2021. FAP : La Francophonie en Asie-Pacifique, 2021, Environnement et développement durable en Asie du Sud-Est, 6 (6), pp.1-18](https://ifi.vnu.edu.vn/uploads/news/2022_11/8final-chapuis-relu-che-ban.pdf)
* [Misslin, R., Clivot, H., Levavasseur, F., Villerd, J., Soulié, J. C., Houot, S., & Therond, O., 2022. Integrated assessment and modeling of regional recycling of organic waste. Journal of Cleaner Production, 379, 134725.](https://www.sciencedirect.com/science/article/pii/S0959652622042974?casa_token=aeSTl_Eyp2YAAAAA:-BJNurVaO-CaJze0rqCvKkp_a6zddhBwDDoShFC4QUKTdFhQygr-mf_37ihIQwA1a66jq_-3odI)
* [Pałka, P., Olszewski, R., Kęsik-Brodacka, M., Wendland, A., Nowak, K., Szczepankowska-Bednarek, U., & Liebers, D. T., 2022. Using multiagent modeling to forecast the spatiotemporal development of the COVID-19 pandemic in Poland. Scientific Reports, 12(1), 1-18.](https://www.nature.com/articles/s41598-022-15605-9)
* [Frasheri, M., Struhar, V., Papadopoulos, A. V., & Causevic, A., 2022. Ethics of Autonomous Collective Decision-Making: The Caesar Framework. Science and Engineering Ethics, 28(6), 1-27.](https://link.springer.com/article/10.1007/s11948-022-00414-0)
* [Estacio, I., Hadfi, R., Blanco, A., Ito, T., & Babaan, J., 2022. Optimization of tree positioning to maximize walking in urban outdoor spaces: A modeling and simulation framework. Sustainable Cities and Society, 86, 104105.](https://www.sciencedirect.com/science/article/pii/S2210670722004206?casa_token=oUJgnozD9e8AAAAA:8h3F2gogQIWAncZo9bJfqkJJbcL6aw4YjRT12v_RTfIuC8xn9HyYjEbCZcPjQHzAMpArpHQRdGc)
* [Laatabi, A., Becu, N., Marilleau, N., Amalric, M., Pignon-Mussaud, C., Anselme, B., ... & Rousseaux, F., 2022. LittoSIM-GEN: A generic platform of coastal flooding management for participatory simulation. Environmental Modelling & Software, 149, 105319.](https://www.sciencedirect.com/science/article/pii/S1364815222000251?casa_token=HY5p9IcyVDIAAAAA:pRCW5jmIfhs4ZP7uALHvLLeJEcYb6DQHLsKIRlCkrR0L3vwpmrkL_Hai3h_jD41oF5Kclq9_R7s)
* [Thierry, H., Rose, E., & Rogers, H., 2022. Landscape configuration and frugivore identity affect seed rain during restoration. Oikos, 2022(2).](https://onlinelibrary.wiley.com/doi/full/10.1111/oik.08323)
* [Grujić, N., Brdar, S., Osinga, S., Hofstede, G. J., Athanasiadis, I. N., Pljakić, M., Obrenović, N., Govedarica, M. & Crnojević, V., 2022. Combining Telecom Data with Heterogeneous Data Sources for Traffic and Emission Assessments—An Agent-Based Approach. ISPRS International Journal of Geo-Information, 11(7), 366.](https://www.mdpi.com/2220-9964/11/7/366)
* [Chapuis, K., Minh-Duc, P., Brugière, A., Zucker, J. D., Drogoul, A., Tranouez, P., Daudé, E. & Taillandier, P., 2022. Exploring multi-modal evacuation strategies for a landlocked population using large-scale agent-based simulations. International Journal of Geographical Information Science, 1-43.](https://www.tandfonline.com/doi/abs/10.1080/13658816.2022.2069774)
* [Gómez Vázquez, J. P., García, Y. E., Schmidt, A. J., Martínez-López, B., & Nuño, M. (2022). Testing and vaccination to reduce the impact of COVID-19 in nursing homes: an agent-based approach. BMC infectious diseases, 22(1), 1-14.](https://link.springer.com/article/10.1186/s12879-022-07385-4)
* [Haddad, H., Bouyahia, Z., Horchani, L., Jabeur, N., & Gharrad, H. (2022). A Connected Mobility Scheme for Taxi Supply-Demand Balancing in a Smart City Context. Computing and Informatics, 41(2), 550-570.](http://147.213.75.17/ojs/index.php/cai/article/view/2022_2_550)
* [Trévisan, D., Taillandier, P., Sarrazin, B., Etienne, D., Ayari, N., Petiqueux, C., Quétin, P. & Janin, C. (2022). OPALE: Operational assessment of landscape water eco-functionalities. Environmental Modelling & Software, 148, 105276.](https://www.sciencedirect.com/science/article/pii/S1364815221003182?casa_token=c_TXH3yyp2UAAAAA:f-RlZm0EHo_YICT5rKBos94tXp1s1JW-sIctyv7-95kns6HLZpKlHbFlN2yZ-PBOTV8cMCZYyB8)
* [Palomo-Briones, G. A., Siller, M., & Grignard, A. (2022). An agent-based model of the dual causality between individual and collective behaviors in an epidemic. Computers in Biology and Medicine, 141, 104995.](https://www.sciencedirect.com/science/article/pii/S0010482521007897?casa_token=_IduwGkSsN4AAAAA:mr99RT4YkkFK42J7TtU1_Zj8wosxwznQPjXIm2OnCsIsMSge_KyV1Wvmi1-HiHjri9eZqRacgls)
* [Cantizano, A., Caro, R., Fernández, M., & Ayala, P. (2022). Human factors in the model of urban fire spread in Madrid (Spain) focused on the poor population. Sustainability, 14(8), 4486.](https://www.mdpi.com/2071-1050/14/8/4486)
* [Truong, Q. C., Nguyen, T. H., Tatsumi, K., Pham, V. T., & Tri, V. P. D. (2022). A Land-Use Change Model to Support Land-Use Planning in the Mekong Delta (MEKOLUC). Land, 11(2), 297.](https://www.mdpi.com/2073-445X/11/2/297)
* [Haddad, H., Bouyahia, Z., & Horchani, L. (2022). On the Sustainability of Shared Mobility Since COVID-19: From Socially Structured to Social Bubble Vanpooling. Sustainability, 14(23), 15764.](https://www.mdpi.com/2071-1050/14/23/15764)
* [Ayoub, N., Jara-Figueroa, C., Grignard, A., & Larson, K. (2023). Proxymix: Influence of Spatial Configuration on Human Collaboration Through Agent-Based Visualization. In Proceedings of SAI Intelligent Systems Conference (pp. 354-362). Springer, Cham.](https://doi.org/10.1007/978-3-031-16078-3_23)
* [Wedrychowicz, B., Maleszka, M., & Sinh, N. V. (2022). Agent Based Model of Elementary School Group Learning. In Asian Conference on Intelligent Information and Database Systems (pp. 697-710). Springer, Singapore.](https://doi.org/10.1007/978-981-19-8234-7_54)

### 2021 [To complete]

* [de Oliveira, G. D., Porto, P. P. G., Alves, C. D. M. A., & Ralha, C. G. (2021). An Agent-Based Model for Simulating Irrigated Agriculture in the Samambaia Basin in Goias. Revista de Informática Teórica e Aplicada, 28(2), 107-123.](https://seer.ufrgs.br/rita/article/view/Vol28_Nr2_107)
* [Bhowmick, D., Winter, S., Stevenson, M. and Vortisch, P., 2021. Exploring the viability of walk-sharing in outdoor urban spaces. Computers, Environment and Urban Systems, 88, p.101635.](https://doi.org/10.1016/j.compenvurbsys.2021.101635)
* [Polanco, L.D. and Siller, M., 2021. Crowd management COVID-19. Annual Reviews in Control.](https://doi.org/10.1016/j.arcontrol.2021.04.006)
* [Taillandier, P., Salliou, N. and Thomopoulos, R., 2021. Introducing the Argumentation Framework Within Agent-Based Models to Better Simulate Agents' Cognition in Opinion Dynamics: Application to Vegetarian Diet Diffusion. Journal of Artificial Societies and Social Simulation, 24(2).](http://jasss.soc.surrey.ac.uk/24/2/6.html)
* [Kaziyeva, D., Loidl, M. and Wallentin, G., 2021. Simulating Spatio-Temporal Patterns of Bicycle Flows with an Agent-Based Model. ISPRS International Journal of Geo-Information, 10(2), p.88.](https://www.mdpi.com/2220-9964/10/2/88)
* [Ramos Corchado, F.F., López Fraga, A.C., Salazar Salazar, R., Ramos Corchado, M.A. and Begovich Mendoza, O., 2021. Cognitive Pervasive Service Composition Applied to Predatory Crime Deterrence. Applied Sciences, 11(4), p.1803.](https://www.mdpi.com/2076-3417/11/4/1803)
* [Salze, P., Sajous, P. and Bertelle, C., 2021. EM3: A Model to Explore the Effects of Ecomobility Policies on an Urban Area. In Complex Systems, Smart Territories and Mobility (pp. 233-256). Springer, Cham.](https://doi.org/10.1007/978-3-030-59302-5_13)
* [Zaatour, W., Marilleau, N., Giraudoux, P., Martiny, N., Amara, A.B.H. and Miled, S.B., 2021. An agent-based model of a cutaneous leishmaniasis reservoir host, Meriones shawi. Ecological Modelling, 443, p.109455.](https://doi.org/10.1016/j.ecolmodel.2021.109455)
* [Catarino, R., Therond, O., Berthomier, J., Miara, M., Mérot, E., Misslin, R., Vanhove, P., Villerd, J. and Angevin, F., 2021. Fostering local crop-livestock integration via legume exchanges using an innovative integrated assessment and modelling approach based on the MAELIA platform. Agricultural Systems, 189, p.103066.](https://doi.org/10.1016/j.ecolmodel.2021.109455)
* [Chapizanis, D., Karakitsios, S., Gotti, A. and Sarigiannis, D.A., 2021. Assessing personal exposure using Agent Based Modelling informed by sensors technology. Environmental Research, Volume 192, p.110141.](https://doi.org/10.1016/j.envres.2020.110141)
* [Hutzler G., Klaudel H., Sali A. (2021) Filtering Distributed Information to Build a Plausible Scene for Autonomous and Connected Vehicles. In: Dong Y., Herrera-Viedma E., Matsui K., Omatsu S., González Briones A., Rodríguez González S. (eds) Distributed Computing and Artificial Intelligence, 17th International Conference. DCAI 2020. Advances in Intelligent Systems and Computing, vol 1237. Springer, Cham.](https://doi.org/10.1007/978-3-030-53036-5_10)

### 2020

* [Callejas, E., Inostrosa-Psijas, A., Moreno, F., Oyarzún, M. and Carvajal-Schiaffino, R., 2020, November. COVID-19 Transmission During a Tsunami Evacuation in a Lockdown City. In 2020 39th International Conference of the Chilean Computer Science Society (SCCC) (pp. 1-8). IEEE.](https://doi.org/10.1109/SCCC51225.2020.9281149)
* [Barthelemy, J., Amirghasemi, M., Arshad, B., Fay, C., Forehead, H., Hutchison, N., Iqbal, U., Li, Y., Qian, Y. and Perez, P., 2020. Problem-Driven and Technology-Enabled Solutions for Safer Communities: The case of stormwater management in the Illawarra-Shoalhaven region (NSW, Australia). Handbook of Smart Cities, pp.1-28.](https://doi.org/10.1007/978-3-030-15145-4_68-1)
* [Zhong, J. and Hattori, H., 2020. Generation of Traffic Flows in Multi-Agent Traffic Simulation with Agent Behavior Model based on Deep Reinforcement Learning. arXiv preprint arXiv:2101.03230.](https://arxiv.org/pdf/2101.03230.pdf)
* [Dang-Huu, T., Gaudou, B., Nguyen-Ngoc, D. and Lê, N.C., 2020, November. An agent-based model for mixed traffic in Vietnam based on virtual local lanes. In 2020 12th International Conference on Knowledge and Systems Engineering (KSE) (pp. 147-152). IEEE.](https://doi.org/10.1109/KSE50997.2020.9287400)
* [Grignard, A., Nguyen-Huu, T., Gaudou, B., Nguyen-Ngoc, D., Brugière, A., Dang-Huu, T., Nghi, H.Q., Khanh, N.T. and Larson, K., 2020, November. CityScope Hanoi: interactive simulation for water management in the Bac Hung Hai irrigation system. In 2020 12th International Conference on Knowledge and Systems Engineering (KSE) (pp. 153-158). IEEE.](https://doi.org/10.1109/KSE50997.2020.9287831)
* [da Silva Rodrigues, L., Oliveira, S.G.M., Lopez, L.F. and Sichman, J.S., 2019, May. Agent Based Simulation of the Dengue Virus Propagation. In International Workshop on Multi-Agent Systems and Agent-Based Simulation (pp. 100-111). Springer, Cham.](https://link.springer.com/chapter/10.1007/978-3-030-60843-9_8)
* [Prudhomme, C., Cruz, C. and Cherifi, H., 2020, An Agent based model for the transmission and control of the COVID-19 in Dijon. In Proc. of The 11th Conference on Network Modeling and Analysis MARAMI, October 14 - 15, 2020](http://ceur-ws.org/Vol-2750/paper10.pdf)
* [Taj, F., Klein, M. and van Halteren, A., 2020, October. An Agent-Based Framework for Persuasive Health Behavior Change Intervention. In International Conference on Health Information Science (pp. 157-168). Springer, Cham.](https://doi.org/10.1007/978-3-030-61951-0_15)
* [Gaudou, B., Huynh, N.Q., Philippon, D., Brugière, A., Chapuis, K., Taillandier, P., Larmande, P. and Drogoul, A., 2020. COMOKIT: a modeling kit to understand, analyze and compare the impacts of mitigation policies against the COVID-19 epidemic at the scale of a city. Frontiers in Public Health, 8, p.587.](https://doi.org/10.3389/fpubh.2020.563247)
* [Drogoul, A., Taillandier, P., Gaudou, B., Choisy, M., Chapuis, K., Huynh, Q.N., Nguyen, N.D., Philippon, D., Brugière, A. and Larmande, P., Designing social simulation to (seriously) support decision-making: COMOKIT, an agent-based modelling toolkit to analyse and compare the impacts of public health interventions against COVID-19. Review of Artificial Societies and Social Simulation, 27th April 2020.](https://rofasss.org/2020/04/27/comokit/)
* [Bucchiarone, A., De Sanctis, M. and Bencomo, N., 2020. Agent-Based Framework for Self-Organization of Collective and Autonomous Shuttle Fleets. IEEE Transactions on Intelligent Transportation Systems.](https://doi.org/10.1109/TITS.2020.3021592)
* [Iskandar, R., Allaw, K., Dugdale, J., Beck, E., Adjizian-Gérard, J., Cornou, C., Harb, J., Lacroix, P., Badaro-Saliba, N., Cartier, S. and Zaarour, R., 2020, Agent-Based simulation of pedestrians’earthquake evacuation; application to Beirut, Lebanon. In 17th World Conference on Earthquake Engineering, 17WCEE, Sendai, Japan](https://www.researchgate.net/profile/Rouba_Iskandar/publication/344439660_AGENT-BASED_SIMULATION_OF_PEDESTRIANS'_EARTHQUAKE_EVACUATION_APPLICATION_TO_BEIRUT_LEBANON/links/5f76e16ea6fdcc0086502b54/AGENT-BASED-SIMULATION-OF-PEDESTRIANS-EARTHQUAKE-EVACUATION-APPLICATION-TO-BEIRUT-LEBANON.pdf)
* [Lee, L.W.F. and Mohd, M.H., 2020, October. Stochastic modelling of the biodiversity effect on sin nombre virus (SNV) prevalence. In AIP Conference Proceedings (Vol. 2266, No. 1, p. 050017). AIP Publishing LLC.](https://doi.org/10.1063/5.0018102)
* [Ngom, B., Diallo, M. and Marilleau, N., 2020, September. MEDART-MAS: MEta-model of Data Assimilation on Real-Time Multi-Agent Simulation. In 2020 IEEE/ACM 24th International Symposium on Distributed Simulation and Real Time Applications (DS-RT) (pp. 1-7). IEEE.](https://doi.org/10.1109/DS-RT50469.2020.9213694)
* [Alonso Vicario, S., Mazzoleni, M., Bhamidipati, S., Gharesifard, M., Ridolfi, E., Pandolfo, C., Alfonso, L., 2020. Unravelling the influence of human behaviour on reducing casualties during flood evacuation. Hydrological Sciences Journal.](https://doi.org/10.1080/02626667.2020.1810254)
* [Tannier C., Cura R., Leturcq S. and Zadora-Rio E., 2020. An agent-based model for exploring the combined effects of social and demographic changes on the concentration and hierarchy of rural settlement patterns in North-Western Europe during the Middle Ages (800–1200 CE). Journal of Anthropological Archaeology, vol. 59.](https://doi.org/10.1016/j.jaa.2020.101204)
* [Wallentin, G., Kaziyeva, D., Reibersdorfer-Adelsberger, E., 2020. COVID-19 Intervention Scenarios for a Long-term Disease Management, International Journal of Health Policy and Management, (), pp. -.](https://www.ijhpm.com/article_3866.html)
* [Duc, P.M., Chapuis, K., Drogoul, A., Gaudou, B., Grignard, A., Marilleau, N. and Nguyen-Huu, T., 2020. HoanKiemAir: simulating impacts of urban management practices on traffic and air pollution using a tangible agent-based model. In 2020 RIVF International Conference on Computing and Communication Technologies (RIVF) (pp. 1-7). IEEE.](https://ieeexplore.ieee.org/abstract/document/9140787)
* [Laatabi, A., Becu, N., Marilleau, N., Pignon-Mussaud, C., Amalric, M., Bertin, X., Anselme, B. and Beck, E., 2020. Mapping and Describing Geospatial Data to Generalize Complex Models: The Case of LittoSIM-GEN. International Journal of Geospatial and Environmental Research, 7(1), p.6.](https://dc.uwm.edu/cgi/viewcontent.cgi?article=1125&context=ijger)
* [Farias, G., Leitzke, B., Born, M., Aguiar, M. and Adamatti, D., 2020. Water Resources Analysis: An Approach based on Agent-Based Modeling. Revista de Informática Teórica e Aplicada, 27(2), pp.81-95.](https://www.seer.ufrgs.br/rita/article/view/RITA_VOL27_NR2_81/pdf)
* [Baeza, J.L., Noennig, J.R., Weber, V., Grignard, A., Noyman, A., Larson, K., Saxe, S. and Baldauf, U., 2020. Mobility Solutions for Cruise Passenger Transfer: An Exploration of Scenarios Using Agent-Based Simulation Models. In Towards User-Centric Transport in Europe 2 (pp. 89-101). Springer, Cham.](https://link.springer.com/chapter/10.1007/978-3-030-38028-1_7)
* [Jindal, A. and Rao, S., 2020. Lockdowns to Contain COVID-19 Increase Risk and Severity of Mosquito-Borne Disease Outbreaks. medRxiv.](https://www.medrxiv.org/content/10.1101/2020.04.11.20061143v1.full.pdf)
* [Haddad, H., Bouyahia, Z. and Jabeur, N., 2020. Socially-Structured Vanpooling: A Case Study in Salalah, Oman. IEEE Intelligent Transportation Systems Magazine.](https://ieeexplore.ieee.org/abstract/document/9085331)
* [Mariano, D.J.K. and Alves, C.D.M.A., 2020. The application of role-playing games and agent-based modelling to the collaborative water management in peri-urban communities. RBRH, 25.](https://www.scielo.br/scielo.php?pid=S2318-03312020000100225&script=sci_arttext)
* [Emery, J., Marilleau, N., Martiny, N., & Thévenin, T., 2020. Le modèle SCAUP: Simulation multi-agents à partir de données de CApteurs Urbains pour la Pollution atmosphérique automobile. Cybergeo: European Journal of Geography.](https://journals.openedition.org/cybergeo/34767)
* [Taj, F., Klein11, M. C., van Halteren, A., 2020. Towards a generic framework for a health behaviour change support agent. In ICAART (1) (pp. 311-318)](https://www.researchgate.net/profile/Fawad_Taj/publication/339904892_Towards_a_Generic_Framework_for_a_Health_Behaviour_Change_Support_Agent/links/5e85e289a6fdcca789e96980/Towards-a-Generic-Framework-for-a-Health-Behaviour-Change-Support-Agent.pdf)
* [Thierry, H. and Rogers, H., 2020. Where to rewild? A conceptual framework to spatially optimize ecological function. Proceedings of the Royal Society B, 287(1922), p.20193017.](https://royalsocietypublishing.org/doi/pdf/10.1098/rspb.2019.3017)
* [Baeza, J.L., Noennig, J.R., Weber, V., Grignard, A., Noyman, A., Larson, K., Saxe, S. and Baldauf, U., 2020. Mobility Solutions for Cruise Passenger Transfer: An Exploration of Scenarios Using Agent-Based Simulation Models. In Towards User-Centric Transport in Europe 2 (pp. 89-101). Springer, Cham.](https://link.springer.com/chapt.../10.1007/978-3-030-38028-1_7)
* [Galimberti, A., Alyokhin, A., Qu, H. and Jason, R.O.S.E., 2020. Simulation modelling of potato virus Y spread in relation to initial inoculum and vector activity. Journal of Integrative Agriculture, 19(2), pp.376-388.](https://www.sciencedirect.com/science/article/pii/S2095311919626560)
* [Daudé, É. and Tranouez, P., 2020. ESCAPE–SG: un simulateur d’évacuation massive de population pour la formation des acteurs à la gestion de crise. Netcom. Réseaux, communication et territoires.](https://journals.openedition.org/netcom/4340)

### 2019

* [Démare, T., Bertelle, C., Dutot, A. and Fournier, D., 2019. Adaptive behavior modeling in logistic systems with agents and dynamic graphs. ACM Transactions on Autonomous and Adaptive Systems (TAAS), 13(3), pp.1-25.](https://dl.acm.org/doi/fullHtml/10.1145/3313799)
* [Olszewski, R., Pałka, P., Turek, A., Kietlińska, B., Płatkowski, T. and Borkowski, M., 2019. Spatiotemporal Modeling of the Smart City Residents’ Activity with Multi-Agent Systems. Applied Sciences, 9(10), p.2059.](https://doi.org/10.3390/app9102059) 
* [Larsen, J.B., 2019. Going beyond BDI for agent-based simulation. Journal of Information and Telecommunication, 3(4), pp.446-464.](https://www.tandfonline.com/doi/full/10.1080/24751839.2019.1620024)
* [Larsen J.B., 2019. Adding Organizational Reasoning to Agent-Based Simulations in GAMA. In: Weyns D., Mascardi V., Ricci A. (eds) Engineering Multi-Agent Systems. EMAS 2018. LNCS, vol 11375. Springer, Cham.](https://doi.org/10.1007/978-3-030-25693-7_13)
* [Cura R., 2019. « Model Visualization ». In Pumain D. (dir), Geographical Modeling: Cities and Territories, John Wiley & Sons, Ltd, pp. 151‑91.](https://doi.org/10.1002/9781119687290.ch6)
* [Humann, J. and Pollard, K.A., 2019. Human Factors in the Scalability of Multirobot Operation: A Review and Simulation. In 2019 IEEE International Conference on Systems, Man and Cybernetics (SMC) (pp. 700-707). IEEE.](https://ieeexplore.ieee.org/document/8913876)
* [Lammoglia, A., Leturcq, S., Delay, E., 2019. The VitiTerroir model to simulate the spatial dynamics of vineyards on the long term (1836-2014). Example of application in the department of Indre-et-Loire. Cybergeo: European Journal of Geography. 2019 Dec 8.](https://journals.openedition.org/cybergeo/33636)
* [Taillandier, P., Salliou, N., Thomopoulos, R., 2019. Coupling agent-based models and argumentation framework to simulate opinion dynamics: application to vegetarian diet diffusion. Social Simulation Conference 2019, Sep 2019, Mainz, Germany. ffhal-02265765f](https://hal.inria.fr/hal-02265765/document)
* [Mancheva, L., Adam, C., & Dugdale, J., 2019. Multi-agent geospatial simulation of human interactions and behaviour in bushfires. In International Conference on Information Systems for Crisis Response and Management. In ISCRAM 2019 conference, Valencia, Spain.](https://www.researchgate.net/profile/Lyuba_Mancheva2/publication/333429109_Multi-agent_geospatial_simulation_of_human_interactions_and_behaviour_in_bushfires/links/5ced3774299bf109da75498d/Multi-agent-geospatial-simulation-of-human-interactions-and-behaviour-in-bushfires.pdf)
* [Daudé, E., Chapuis, K., Taillandier, P., Tranouez, P., Caron, C., Drogoul, A., Gaudou, B., Rey-Coyrehourq, S., Saval, A., Zucker, J. D., 2019. ESCAPE: Exploring by Simulation Cities Awareness on Population Evacuation. In ISCRAM 2019 conference, Valencia, Spain.](https://hal.archives-ouvertes.fr/hal-02130387/document)
* [Farias, G. P., Leitzke, B. S., Born, M. B., de Aguiar, M. S., Adamatti, D. F., 2019. Modelagem Baseada em Agentes para Analise de Recursos Hidricos. In the Workshop-School on Agents, Environments, and Applications (WESAAC), Florianopolis – Santa Catarina (Brazil).](https://gsigma.ufsc.br/wesaac2019/paper/WESAAC_2019_paper_10.pdf)
* [Marrocco, L., Ferrer, E. C., Bucchiarone, A., Grignard, A., Alonso, L., Larson, K., 2019. BASIC: Towards a Blockchained Agent-Based SImulator for Cities. In International Workshop on Massively Multiagent Systems (pp. 144-162). Springer, Cham.](https://doi.org/10.1007/978-3-030-20937-7_10)
* [Ruiz-Chavez, Z., Salvador-Meneses, J., Mejía-Astudillo, C., Diaz-Quilachamin, S., 2019. Analysis of Dogs's Abandonment Problem Using Georeferenced Multi-agent Systems. International Work-Conference on the Interplay Between Natural and Artificial Computation (pp. 297-306). Springer, Cham. https://doi.org/10.1007/978-3-030-19651-6_29](https://link.springer.com/chapter/10.1007/978-3-030-19651-6_29)
* [Rodrique, K., Tuong, H., Manh, N., 2019. An Agent-based Simulation for Studying Air Pollution from Traffic in Urban Areas: The Case of Hanoi City. Int. J. Adv. Comput. Sci. Appl. 10. https://doi.org/10.14569/IJACSA.2019.0100376](https://thesai.org/Publications/ViewPaper?Volume=10&Issue=3&Code=IJACSA&SerialNo=76)
* [Micolier, A., Taillandier, F., Taillandier, P., Bos, F., 2019. Li-BIM, an agent-based approach to simulate occupant-building interaction from the Building-Information Modelling. Eng. Appl. Artif. Intell. 82, 44–59. https://doi.org/10.1016/j.engappai.2019.03.008](https://www.sciencedirect.com/science/article/pii/S0952197619300582?fbclid=IwAR197vrRbRq5BOKJqOZRRqHtnOfRxvZ2yJfvvQWQSXLL-p5y1akuDehR4jg)
* [Houssou, N.L.J., Cordero, J.D., Bouadjio-Boulic, A., Morin, L., Maestripieri, N., Ferrant, S., Belem, M., Pelaez Sanchez, J.I., Saenz, M., Lerigoleur, E., Elger, A., Gaudou, B., Maurice, L., Saqalli, M., 2019. Synchronizing Histories of Exposure and Demography: The Construction of an Agent-Based Model of the Ecuadorian Amazon Colonization and Exposure to Oil Pollution Hazards. J. Artif. Soc. Soc. Simul. 22, 1. https://doi.org/10.18564/jasss.3957](http://jasss.soc.surrey.ac.uk/22/2/1.html)
* [Knapps, V., Zimmermann, K.-H., 2019. Distributed Monitoring of Topological Events via Homology. ArXiv190104146 Cs Math.](https://arxiv.org/pdf/1901.04146.pdf?fbclid=IwAR2HitGdAVByVBjr8z5AYu9Rxl16fzge8P4vYbXCoxLtoVGDDmk1ZjZw_vg)
* [Galimberti, A., Alyokhin, A., Qu, H., Rose, J., 2019. Simulation modelling of Potato virus Y spread in relation to initial inoculum and vector activity. Journal of Integrative Agriculture](http://www.chinaagrisci.com/Jwk_zgnykxen/EN/article/downloadArticleFile.do?attachType=PDF&id=12288)


### 2018

* [Alonso, L., Zhang, Y.R., Grignard, A., Noyman, A., Sakai, Y., ElKatsha, M., Doorley, R. and Larson, K., 2018, July. Cityscope: a data-driven interactive simulation tool for urban design. Use case Volpe. In International conference on complex systems (pp. 253-261). Springer, Cham.](https://link.springer.com/chapter/10.1007/978-3-319-96661-8_27)
* [Sobieraj, J., Nouveliere, L., Hutzler, G. and Klaudel, H., 2018, October. Modélisation du changement de voie de véhicules autonomes à différents niveaux d'abstraction. Journées Francophones sur les Systèmes Multi-Agents 2018 (JFSMA’2018), Oct 2018, Métabief, France. pp.21–30.](https://hal.archives-ouvertes.fr/hal-02062425)
* [Tsagkis, P. and Photis, Y.N., 2018. Using Gama platform and Urban Atlas Data to predict urban growth. The case of Athens. 13th International Conference of the Hellenic Geographical Society.](http://www.hellenicgeosociety.org/en/system/files/tsagkis_urban_growth_gama_athens.pdf)
* [Marilleau, N., Lang, C., Giraudoux, P., 2018. Coupling agent-based with equation-based models to study spatially explicit megapopulation dynamics. Ecol. Model. 384, 34–42. https://doi.org/10.1016/j.ecolmodel.2018.06.011](https://www.sciencedirect.com/science/article/pii/S0304380018302163)
* [Adam, C., Taillandier, F., 2018. Games ready to use: A serious game for teaching natural risk management.](https://halshs.archives-ouvertes.fr/halshs-02115959/document) Simulation and Gaming, SAGE Publications, 2018. 
* [Alfeo, A.L., Ferrer, E.C., Carrillo, Y.L., Grignard, A., Pastor, L.A., Sleeper, D.T., Cimino, M.G.C.A., Lepri, B., Vaglini, G., Larson, K., Dorigo, M., Pentland, A. `Sandy’, 2018. Urban Swarms: A new approach for autonomous waste management. ArXiv181007910 Cs.](https://arxiv.org/pdf/1810.07910.pdf?fbclid=IwAR1l03b-whlHCWsKG6B_0Dv8CboY12epzCHyNYbcft_CZKHWpZETZvBcGis)
* [Qu, H., Drummond, F., 2018. Simulation-based modeling of wild blueberry pollination. Comput. Electron. Agric. 144, 94–101. https://doi.org/10.1016/j.compag.2017.11.003](https://www.sciencedirect.com/science/article/pii/S0168169916310274?fbclid=IwAR2pwkfBJAfZFl6B0En6uZvSloIqLw8ge_oEQ9Bnt0eKk-QgUbNapl2Ke_E)
* [Shaham, Y., Benenson, I., 2018. Modeling fire spread in cities with non-flammable construction. Int. J. Disaster Risk Reduct. 31, 1337–1353. https://doi.org/10.1016/j.ijdrr.2018.03.010](https://www.sciencedirect.com/science/article/pii/S2212420918302991?fbclid=IwAR2zpwWzjazONUVbYjU-YyriG76HViaI-lJn0ShejD2AAkp8MX5siejsNYE)
* [Mewes, B., Schumann, A.H., 2018. IPA (v1): a framework for agent-based modelling of soil water movement. Geosci. Model Dev. 11, 2175–2187. https://doi.org/10.5194/gmd-11-2175-2018](https://www.geosci-model-dev.net/11/2175/2018/gmd-11-2175-2018.pdf)
* [Grignard, A., Macià, N., Alonso Pastor, L., Noyman, A., Zhang, Y., Larson, K., 2018. CityScope Andorra: A Multi-level Interactive and Tangible Agent-based Visualization, in: Proceedings of the 17th International Conference on Autonomous Agents and MultiAgent Systems, AAMAS ’18. International Foundation for Autonomous Agents and Multiagent Systems, Richland, SC, pp. 1939–1940.](https://dl.acm.org/citation.cfm?id=3238030&fbclid=IwAR1q0nOhOs0xw1yttMjeQ_P41fKaDWX-EN-hzL92s9rPdunEuCpQSFyFmsU)
* [Zhang, Y., Grignard, A., Lyons, K., Aubuchon, A., Larson, K., 2018. Real-time Machine Learning Prediction of an Agent-Based Model for Urban Decision-making (Extended Abstract) 3.](http://ifaamas.org/Proceedings/aamas2018/pdfs/p2171.pdf)
* [Bandyopadhyay, M., Singh, V., 2018. Agent-based geosimulation for assessment of urban emergency response plans. Arab. J. Geosci. 11, 165. https://doi.org/10.1007/s12517-018-3523-5](https://link.springer.com/article/10.1007/s12517-018-3523-5?fbclid=IwAR3O4FZnj0Z0S1bxVtm9cZIaa3WsDZeRQweFE2jz5WQwjh-UGHOfMHrd6HA)
* [Samad, T., Iqbal, S., Malik, A.W., Arif, O., Bloodsworth, P., 2018. A multi-agent framework for cloud-based management of collaborative robots. Int. J. Adv. Robot. Syst. 15, 172988141878507. https://doi.org/10.1177/1729881418785073](https://journals.sagepub.com/doi/10.1177/1729881418785073?fbclid=IwAR1f8fpYevgnIP1WQVgktpxKFvS25nP1909EkpxqaCqnn0rwXSqnNoNXtcU)
* [Humann, J., Spero, E., 2018. Modeling and simulation of multi-UAV, multi-operator surveillance systems, in: 2018 Annual IEEE International Systems Conference (SysCon). Presented at the 2018 Annual IEEE International Systems Conference (SysCon), pp. 1–8. https://doi.org/10.1109/SYSCON.2018.8369546](https://ieeexplore.ieee.org/abstract/document/8369546?fbclid=IwAR0qCeI1WHraRCeff7jDY7leNZOpeW-nUgUM24wdzvZZ-EVo3osE00vYbaE)
* [Mazzoli, M., Re, T., Bertilone, R., Maggiora, M., Pellegrino, J., 2018. Agent Based Rumor Spreading in a scale-free network. ArXiv180505999 Cs.](https://arxiv.org/pdf/1805.05999.pdf?fbclid=IwAR0IBcHTAewId0jtn1MMqOhxMeO-19qnaA_1V6Wy1o8r6E9zzUWL4XRp4Pw)
* [Grignard, A., Alonso, L., Taillandier, P., Gaudou, B., Nguyen-Huu, T., Gruel, W., Larson, K., 2018a. The Impact of New Mobility Modes on a City: A Generic Approach Using ABM, in: Morales, A.J., Gershenson, C., Braha, D., Minai, A.A., Bar-Yam, Y. (Eds.), Unifying Themes in Complex Systems IX, Springer Proceedings in Complexity. Springer International Publishing, pp. 272–280.](https://link.springer.com/chapter/10.1007/978-3-319-96661-8_29)
* [Touhbi, S., Babram, M.A., Nguyen-Huu, T., Marilleau, N., Hbid, M.L., Cambier, C., Stinckwich, S., 2018. Time Headway analysis on urban roads of the city of Marrakesh. Procedia Comput. Sci. 130, 111–118. https://doi.org/10.1016/j.procs.2018.04.019](https://www.sciencedirect.com/science/article/pii/S1877050918303697)
* [Laatabi, A., Marilleau, N., Nguyen-Huu, T., Hbid, H., Ait Babram, M., 2018. ODD+2D: An ODD Based Protocol for Mapping Data to Empirical ABMs. J. Artif. Soc. Soc. Simul. 21, 9. https://doi.org/10.18564/jasss.3646](http://jasss.soc.surrey.ac.uk/21/2/9.html)
* [Chapuis K., Taillandier P., Gaudou B., Drogoul A., Daudé E. (2018) A Multi-modal Urban Traffic Agent-Based Framework to Study Individual Response to Catastrophic Events. In: Miller T., Oren N., Sakurai Y., Noda I., Savarimuthu B., Cao Son T. (eds) PRIMA 2018: Principles and Practice of Multi-Agent Systems. PRIMA 2018. Lecture Notes in Computer Science, vol 11224. Springer, Cham](https://link.springer.com/chapter/10.1007/978-3-030-03098-8_28)
* [Bourgais, M., Taillandier, P., Vercouter, L., Adam, C., 2018. Emotion Modeling in Social Simulation: A Survey. J. Artif. Soc. Soc. Simul. 21, 5.](http://jasss.soc.surrey.ac.uk/21/2/5.html) 
* [Grillot M., Vayssières J., Masse D., 2018. Agent-based modelling as a time machine to assess nutrient cycling reorganization during past agrarian transitions in West Africa. Agricultural Systems 164, 133‑151. https://doi.org/10.1016/j.agsy.2018.04.008](https://doi.org/10.1016/j.agsy.2018.04.008)
* [Grillot, M., Guerrin, F., Gaudou, B., Masse, D., Vayssières, J., 2018. Multi-level analysis of nutrient cycling within agro-sylvo-pastoral landscapes in West Africa using an agent-based model. Environ. Model. Softw. 107, 267–280. https://doi.org/10.1016/j.envsoft.2018.05.003](https://www.sciencedirect.com/science/article/pii/S1364815217304000)
* [Valette, M., Gaudou, B., Longin, D., Taillandier, P., 2018. Modeling a Real-Case Situation of Egress Using BDI Agents with Emotions and Social Skills, in: Miller, T., Oren, N., Sakurai, Y., Noda, I., Savarimuthu, B.T.R., Cao Son, T. (Eds.), PRIMA 2018: Principles and Practice of Multi-Agent Systems. Springer International Publishing, Cham, pp. 3–18. https://doi.org/10.1007/978-3-030-03098-8_1](https://link.springer.com/chapter/10.1007/978-3-030-03098-8_1)
* [Humann, J., Spero, E. (2018) Modeling and Simulation of multi-UAV, multi-Operator Surveillance Systems, 2018 Annual IEEE International Systems Conference (SysCon), Vancouver, BC.](https://ieeexplore.ieee.org/document/8369546)
* [Lammoglia, A., Leturcq, S., Delay, E., 2018. Le modèle VitiTerroir pour simuler la dynamique spatiale des vignobles sur le temps long (1836-2014). Exemple d’application au département d’Indre-et-Loire. Cybergeo Eur. J. Geogr. https://doi.org/10.4000/cybergeo.29324](https://journals.openedition.org/cybergeo/29324?fbclid=IwAR0EZmIGxzsUEMY4movt59gB9xV0XiL35B0B-ELg2-eFMJvMNL12ohqlbdQ)
* [Amores, D., Vasardani, M., Tanin, E., 2018. Early Detection of Herding Behaviour during Emergency Evacuations 15 pages. https://doi.org/10.4230/lipics.giscience.2018.1](http://drops.dagstuhl.de/opus/volltexte/2018/9329/pdf/LIPIcs-GISCIENCE-2018-1.pdf?fbclid=IwAR0oHXmLM8V8wX7kqBjH0-o_sXzEPEriIhDTa9FrpfLdiBQQgAE5Sl7NAFM)
* [Rakotoarisoa, M.M., Fleurant, C., Taibi, A.N., Rouan, M., Caillault, S., Razakamanana, T., Ballouche, A., 2018. Un modèle multi-agents pour évaluer la vulnérabilité aux inondations : le cas des villages aux alentours du Fleuve Fiherenana (Madagascar). Cybergeo Eur. J. Geogr. https://doi.org/10.4000/cybergeo.29144](https://journals.openedition.org/cybergeo/29144?fbclid=IwAR324KnZAEbK2cTV1x3L-DG-1Ggzp67kKFt6puZ8PwMcRCf5XIYT6Sv9wAI)


### 2017

* [Bañgate, J., Dugdale, J., Beck, E., & Adam, C. (2017, December). SOLACE a multi-agent model of human behaviour driven by social attachment during seismic crisis. In 2017 4th International Conference on Information and Communication Technologies for Disaster Management (ICT-DM) (pp. 1-9). IEEE.](https://www.researchgate.net/publication/322881549_SOLACE_a_multi-agent_model_of_human_behaviour_driven_by_social_attachment_during_seismic_crisis)
* [Arcile, J., Sobieraj, J., Klaudel, H., & Hutzler, G. (2017). Combination of simulation and model-checking for the analysis of autonomous vehicles’ behaviors: A case study. In Multi-Agent Systems and Agreement Technologies (pp. 292-304). Springer, Cham.](https://link.springer.com/chapter/10.1007/978-3-030-01713-2_21)
* [Cura, R., Tannier, C., Leturcq, S., Zadora-Rio, E., Lorans, E., & Rodier, X. (2017). Transition 8: 800-1100. Fixation, polarisation et hiérarchisation de l'habitat rural en Europe du Nord-Ouest (chap. 11).](https://hal.archives-ouvertes.fr/hal-01666498/) (https://simfeodal.github.io/)
* [Becu, N., Amalric, M., Anselme, B., Beck, E., Bertin, X., Delay, E., Long, N., Marilleau, N., Pignon-Mussaud, C., Rousseaux, F., 2017. Participatory simulation to foster social learning on coastal flooding prevention. Environ. Model. Softw. 98, 1–11. https://doi.org/10.1016/j.envsoft.2017.09.003](https://www.sciencedirect.com/science/article/pii/S1364815216310477)
* [Adam, C., Gaudou, B., 2017. Modelling Human Behaviours in Disasters from Interviews: Application to Melbourne Bushfires. J. Artif. Soc. Soc. Simul. 20, 12. https://doi.org/10.18564/jasss.3395](http://jasss.soc.surrey.ac.uk/20/3/12.html)
* [Adam, C., Taillandier, P., Dugdale, J., Gaudou, B., 2017. BDI vs FSM Agents in Social Simulations for Raising Awareness in Disasters: A Case Study in Melbourne Bushfires. Int. J. Inf. Syst. Crisis Response Manag. 9, 27–44. https://doi.org/10.4018/IJISCRAM.2017010103](https://www.igi-global.com/article/bdi-vs-fsm-agents-in-social-simulations-for-raising-awareness-in-disasters/192104)
* [Amalric, M., Anselme, B., Bécu, N., Delay, E., Marilleau, N., Pignon, C., Rousseaux, F., 2017. Sensibiliser au risque de submersion marine par le jeu ou faut-il qu’un jeu soit spatialement réaliste pour être efficace ? Sci. Jeu. https://doi.org/10.4000/sdj.859](https://journals.openedition.org/sdj/859)
* [Emery, J., Marilleau, N., Martiny, N., Thévenin, T., Badram, M.A., Grignard, A., Hbdid, H., 2017. MARRAKAIR : UNE SIMULATION PARTICIPATIVE POUR OBSERVER LES ÉMISSIONS ATMOSPHÉRIQUES DU TRA- FIC ROUTIER EN MILIEU URBAIN 5.](https://hal.archives-ouvertes.fr/hal-01703019)
* [Martiny, N., Emery, J., Ceamanos, X., Briottet, X., Marilleau, N., Thevenin, T., Léon, J.-F., 2017. La Qualité de l’air en ville à Très haute Résolution (Quali_ThR): Apport des images Pléiades dans la démarche SCAUP ?, in: FUTURMOB : Préparer La Transition Vers La Mobilité Autonome. Montbéliard, France.](https://hal.archives-ouvertes.fr/hal-01703019)
* [Ta, X.-H., Gaudou, B., Longin, D., Ho, T.V., 2017. Emotional contagion model for group evacuation simulation. Informatica 41.](http://www.informatica.si/index.php/informatica/article/view/1661)
* [Huynh, N.Q., Nguyen-Huu, T., Grignard, A., Huynh, H.X., Drogoul, A., 2017. Coupling equation based models and agent-based models: example of a multi-strains and switch SIR toy model. EAI Endorsed Trans. Context-Aware Syst. Appl. 4, 152334. https://doi.org/10.4108/eai.6-3-2017.152334](https://eudl.eu/doi/10.4108/eai.6-3-2017.152334)
* [Taillandier, P., Bourgais, M., Drogoul, A., Vercouter, L. Using parallel computing to improve the scalability of models with BDI agents. Social Simulation Conference, Sep 2017, Dublin, Ireland.](https://hal.inria.fr/hal-01573385v1)
* [Philippon, D., Choisy, M., Drogoul, A., Gaudou, B., Marilleau, N., Taillandier, P., Truong, Q.C. (2017) Exploring Trade and Health Policies Influence on Dengue Spread with an Agent-Based Model, in: Nardin, L.G., Antunes, L. (Eds.), Multi-Agent Based Simulation XVII. Springer International Publishing, Cham, pp. 111–127.doi:10.1007/978-3-319-67477-3_6](https://link.springer.com/chapter/10.1007/978-3-319-67477-3_6)
* [Marilleau, N., Giraudoux, P., Lang, C., 2017. Multi-agent simulation as a tool to study risk in a spatial context, in: International Forum on Disaster Risk Management. Kunming, China.](https://hal.archives-ouvertes.fr/hal-01512604)


### 2016

* [Fosset, P., Banos, A., Beck, E., Chardonnel, S., Lang, C., Marilleau, N., Piombini, A., Leysens, T., Conesa, A., Andre-Poyaud, I., Thevenin, T., 2016. Exploring Intra-Urban Accessibility and Impacts of Pollution Policies with an Agent-Based Simulation Platform: GaMiroD. Systems 4, 5. https://doi.org/10.3390/systems4010005](https://www.mdpi.com/2079-8954/4/1/5/htm)
* [Grignard, A., Fantino, G., Lauer, J.W., Verpeaux, A., Drogoul, A., 2016. Agent-Based Visualization: A Simulation Tool for the Analysis of River Morphosedimentary Adjustments, in: Gaudou, B., Sichman, J.S. (Eds.), Multi-Agent Based Simulation XVI. Springer International Publishing, Cham, pp. 109–120. https://doi.org/10.1007/978-3-319-31447-1_7](https://link.springer.com/chapter/10.1007/978-3-319-96661-8_29?fbclid=IwAR2k4X7QTJ5LuD2ScbJwcQjrq0Xqkl0U7PNWdxvOis6Ydl1bAepRGnCzdtM)
* [Lucien, L., Lang, C., Marilleau, N., Philippe, L., 2016. Multiagent Hybrid Architecture for Collaborative Exchanges between Communicating Vehicles in an Urban Context. Procedia Comput. Sci. 83, 695–699. https://doi.org/10.1016/j.procs.2016.04.154](https://www.sciencedirect.com/science/article/pii/S1877050916301855)
* [Laatabi, A., Marilleau, N., Nguyen-Huu, T., Hbid, H., Babram, M.A., 2016. Formalizing Data to Agent Model Mapping Using MOF: Application to a Model of Residential Mobility in Marrakesh, in: Jezic, G., Chen-Burger, Y.-H.J., Howlett, R.J., Jain, L.C. (Eds.), Agent and Multi-Agent Systems: Technology and Applications. Springer International Publishing, Cham, pp. 107–117. https://doi.org/10.1007/978-3-319-39883-9_9](https://link.springer.com/chapter/10.1007/978-3-319-39883-9_9)
* [Taillandier, P., Banos, A., Drogoul, A., Gaudou, B., Marilleau, N., Truong, Q.C. (2016) Simulating Urban Growth with Raster and Vector models: A case study for the city of Can Tho, Vietnam, in: Osman, N., Sierra, C. (Eds.), Autonomous Agents and Multiagent Systems, Lecture Notes in Computer Science. Springer International Publishing, pp. 154–171. Doi: 10.1007/978-3-319-46840-2_10.](https://link.springer.com/chapter/10.1007/978-3-319-46840-2_10)
* [Nghi, H.Q, Nguyen-Huu, T., Grignard, A., Huynh, X.H., Drogoul, A. (2016) Toward an Agent-Based and Equation-Based Coupling Framework. International Conference on Nature of Computation and Communication, 311-324](https://link.springer.com/chapter/10.1007/978-3-319-46909-6_28)
* [Bhamidipati, S., van der Lei, T., & Herder, P. (2016) A layered approach to model interconnected infrastructure and its significance for asset management. EJTIR, 16(1), 254-272.](http://resolver.tudelft.nl/uuid:37340b1e-0776-4f72-a262-82f1db8b7db5)
* [Drogoul A., Huynh N.Q. and Truong Q.C. (2016) Coupling environmental, social and economic models to understand land-use change dynamics in the Mekong Delta. Front. Environ. Sci. 4:19. doi:10.3389/fenvs.2016.00019.](https://www.frontiersin.org/articles/10.3389/fenvs.2016.00019/full)
* [Grignard, A., Fantino, G., Lauer, J.W., Verpeaux, A., Drogoul, A., 2016. Agent-Based Visualization: A Simulation Tool for the Analysis of River Morphosedimentary Adjustments, in: Gaudou, B., Sichman, J.S. (Eds.), Multi-Agent Based Simulation XVI. Springer International Publishing, Cham, pp. 109–120. https://doi.org/10.1007/978-3-319-31447-1_7](https://link.springer.com/chapter/10.1007/978-3-319-31447-1_7)
* [Truong, Q.C., Taillandier, P., Gaudou, B., Vo, M.Q., Nguyen, T.H., Drogoul, A. (2016) Exploring Agent Architectures for Farmer Behavior in Land-Use Change. A Case Study in Coastal Area of the Vietnamese Mekong Delta, in: Gaudou, B., Sichman, J.S. (Eds.), Multi-Agent Based Simulation XVI, Lecture Notes in Computer Science. Springer International Publishing, pp. 146–158. doi: 10.1007/978-3-319-31447-1_10.](https://link.springer.com/chapter/10.1007/978-3-319-31447-1_10)
* [Lang, C., Marilleau, N., Giraudoux, P., 2016. Couplage de SMA avec des EDO pour simuler les phénomènes écologiques à grande échelle, in: 2ème Rencontre ”Informatique Scientifique à Besançon”. Besançon, France.](https://hal.archives-ouvertes.fr/hal-01408475)
* [Giraudoux, P., Lang, C., Marilleau, N., 2016. Coupling agent based with equation based models for studying explicitly spatial population dynamics.](https://hal.inria.fr/hal-01367362/)
* [Lucien, L., Lang, C., Marilleau, N., Philippe, L., 2016. A Proposition of Data Organization and Exchanges to Collaborate in an Autonomous Agent Context, in: 2016 IEEE Intl Conference on Computational Science and Engineering (CSE) and IEEE Intl Conference on Embedded and Ubiquitous Computing (EUC) and 15th Intl Symposium on Distributed Computing and Applications for Business Engineering (DCABES). Presented at the 2016 19th IEEE Intl Conference on Computational Science and Engineering (CSE), IEEE 14th Intl Conference on Embedded and Ubiquitous Computing (EUC), and 15th Intl Symposium on Distributed Computing and Applications for Business Engineering (DCABES), IEEE, Paris, pp. 561–568. https://doi.org/10.1109/CSE-EUC-DCABES.2016.242](https://ieeexplore.ieee.org/document/7982304)


### 2015

* [Gasmi, N., Grignard, A., Drogoul, A., Gaudou, B., Taillandier, P., Tessier, O., An, V.D., 2015. Reproducing and Exploring Past Events Using Agent-Based Geo-Historical Models, in: Grimaldo, F., Norling, E. (Eds.), Multi-Agent-Based Simulation XV. Springer International Publishing, Cham, pp. 151–163.](https://www.springerprofessional.de/en/reproducing-and-exploring-past-events-using-agent-based-geo-hist/2363996)
* [Le, V.-M., Chevaleyre, Y., Ho Tuong Vinh, Zucker, J.-D., 2015. Hybrid of linear programming and genetic algorithm for optimizing agent-based simulation. Application to optimization of sign placement for tsunami evacuation, in: The 2015 IEEE RIVF International Conference on Computing & Communication Technologies - Research, Innovation, and Vision for Future (RIVF). Presented at the 2015 IEEE RIVF International Conference on Computing & Communication Technologies, Research, Innovation, and Vision for the Future (RIVF), IEEE, Can Tho, Vietnam, pp. 138–143. https://doi.org/10.1109/RIVF.2015.7049889](https://ieeexplore.ieee.org/document/7049889)
* [Emery, J., Marilleau, N., Martiny, N., Thévenin, T., Villery, J., 2015. L’apport de la simulation multi-agent du trafic routier pour l’estimation des pollutions atmosphériques automobiles, in: Douzièmes Rencontres de Théo Quant. Besançon, France.](https://hal.archives-ouvertes.fr/hal-01155367)


### 2014

* [Macatulad, E. G., Blanco, A. C. (2014) 3DGIS-BASED MULTI-AGENT GEOSIMULATION AND VISUALIZATION OF BUILDING EVACUATION USING GAMA PLATFORM. The International Archives of the Photogrammetry, Remote Sensing and Spatial Information Sciences, Volume XL-2, 2014. ISPRS Technical Commission II Symposium, 6 – 8 October 2014, Toronto, Canada.](http://www.int-arch-photogramm-remote-sens-spatial-inf-sci.net/XL-2/87/2014/isprsarchives-XL-2-87-2014.pdf) 
* [Bhamidipati, S. (2014) A simulation framework for asset management in climate-change adaptation of transportation infrastructure. In: Proceedings of 42nd European Transport Conference. Frankfurt, Germany.](http://abstracts.aetransport.org/paper/download/id/4317)
* [Gaudou, B., Sibertin-Blanc, C., Thérond, O., Amblard, F., Auda, Y., Arcangeli, J.-P., Balestrat, M., Charron-Moirez, M.-H., Gondet, E., Hong, Y., Lardy, R., Louail, T., Mayor, E., Panzoli, D., Sauvage, S., Sanchez-Perez, J., Taillandier, P., Nguyen, V. B., Vavasseur, M., Mazzega, P. (2014). The MAELIA multi-agent platform for integrated assessment of low-water management issues. In: International Workshop on Multi-Agent-Based Simulation (MABS 2013), Saint-Paul, MN, USA, 06/05/2013-07/05/2013, Vol. 8235, Shah Jamal Alam, H. Van Dyke Parunak, (Eds.), Springer, Lecture Notes in Computer Science, p. 85-110.](http://simsoc.free.fr/ressources/articles/2013/MAELIAmabs13.pdf)
* [Gaudou, B., Lorini, E., Mayor, E. (2014.) Moral Guilt: An Agent-Based Model Analysis. In: Conference of the European Social Simulation Association (ESSA 2013), Warsaw, 16/09/2013-20/09/2013, Vol. 229, Springer, Advances in Intelligent Systems and Computing, p. 95-106.](http://www.irit.fr/EmoTES/Documents/Conference/Conf_ic_2013_Gaudou_et_al.pdf)
* [Le, V.-M., Chevaleyre, Y., Zucker, J.-D., Tuong Vinh, H., 2014. Approaches to Optimize Local Evacuation Maps for Helping Evacuation in Case of Tsunami, in: Hanachi, C., Bénaben, F., Charoy, F. (Eds.), Information Systems for Crisis Response and Management in Mediterranean Countries. Springer International Publishing, Cham, pp. 21–31. https://doi.org/10.1007/978-3-319-11818-5_3](https://link.springer.com/chapter/10.1007%2F978-3-319-11818-5_3)
* [Emery, J., Marilleau, N., Thévenin, T., Martiny, N., 2014. Du comptage ponctuel à l’affectation par simulation multi-agents : application à la circulation routière de la ville de Dijon, in: Conférence Internationale de Géomatique et d’analyse Spatiale (SAGEO). Grenoble, France, p. CD-ROM.](https://hal.archives-ouvertes.fr/hal-01157482)


### 2013

* [Drogoul, A., Gaudou, B., Grignard, A., Taillandier, P., & Vo, D. A. (2013). Practical Approach To Agent-Based Modelling. In: Water and its Many Issues. Methods and Cross-cutting Analysis. Stéphane Lagrée (Eds.), Journées de Tam Dao, p. 277-300, Regional Social Sciences Summer University.](http://hal.archives-ouvertes.fr/docs/00/93/24/23/PDF/JTD2012_-_Atelier_-_EN.pdf)
* [Drogoul, A., Gaudou, B. (2013) Methods for Agent-Based Computer Modelling. In: Water and its Many Issues. Methods and Cross-cutting Analysis. Stéphane Lagrée (Eds.), Journées de Tam Dao, 1.6, p. 130-154, Regional Social Sciences Summer University. ](http://www.tamdaoconf.com/tamdao/wp-content/plugins/download-monitor/download.php?id=185)
* [Truong, M.-T., Amblard, F., Gaudou, B., Sibertin-Blanc, C., Truong, V. X., Drogoul, A., Hyunh, X. H., Le, M. N. (2013). An implementation of framework of business intelligence for agent-based simulation. In: Symposium on Information and Communication Technology (SoICT 2013), Da Nang, Viet Nam, 05/12/2013-06/12/2013, Quyet Thang Huynh, Thanh Binh Nguyen, Van Tien Do, Marc Bui, Hong Son Ngo (Eds.), ACM, p. 35-44.](http://dl.acm.org/citation.cfm?id=2542069)
* [Le, V. M., Gaudou, B., Taillandier, P., Vo, D. A (2013). A New BDI Architecture To Formalize Cognitive Agent Behaviors Into Simulations. In: Advanced Methods and Technologies for Agent and Multi-Agent Systems (KES-AMSTA 2013), Hue, Vietnam, 27/05/2013-29/05/2013, Vol. 252, Dariusz Barbucha, Manh Thanh Le, Robert J. Howlett, C. Jain Lakhmi (Eds.), IOS Press, Frontiers in Artificial Intelligence and Applications, p. 395-403.](http://ebooks.iospress.nl/publication/32865)
* [Emery, J., Boyard-Micheau, J., Marilleau, N., Martiny, N., Thévenin, T., 2013. Exploitation of traffic counting data for traffic study in urban areas: from traffic assignment to simulation model validation, in: 18th European Colloquium in Theoretical and Quantitative Geography (ECTQG). Dourdan, France.](https://hal.archives-ouvertes.fr/hal-00881294)
* [Banos, A., Marilleau, N., 2013. Improving Individual Accessibility to the City, in: Gilbert, T., Kirkilionis, M., Nicolis, G. (Eds.), Proceedings of the European Conference on Complex Systems 2012, Springer Proceedings in Complexity. Springer International Publishing, pp. 989–992.](https://link.springer.com/chapter/10.1007/978-3-319-00395-5_118)

### 2012

* [Taillandier, P., Therond, O., Gaudou B. (2012), A new BDI agent architecture based on the belief theory. Application to the modelling of cropping plan decision-making. In 'International Environmental Modelling and Software Society', Germany, pp. 107-116.](http://www.iemss.org/sites/iemss2012//proceedings/H2_0404_Taillandier_et_al.pdf)
* [NGUYEN, Q.T., BOUJU, A., ESTRAILLIER, P. (2012) Multi-agent architecture with space-time components for the simulation of urban transportation systems.](http://www.sciencedirect.com.accesdistant.upmc.fr/science/article/pii/S1877042812042188)
* [Cisse, A., Bah, A., Drogoul, A., Cisse, A.T., Ndione, J.A., Kebe, C.M.F. & Taillandier P. (2012), Un modèle à base d’agents sur la transmission et la diffusion de la fièvre de la Vallée du Rift à Barkédji (Ferlo, Sénégal), Studia Informatica Universalis 10 (1), pp. 77-97.](http://studia.complexica.net/Art/RI100104.pdf)
* [Taillandier, P., Amouroux, E., Vo, D.A. and Olteanu-Raimond A.M. (2012), Using Belief Theory to formalize the agent behavior: application to the simulation of avian flu propagation. In ‘The first Pacific Rim workshop on Agent-based modeling and simulation of Complex Systems (PRACSYS)’, India, Volume 7057/2012, pp. 575-587.](http://www.springerlink.com/content/8qg53u75q46252l2/)
* [Le, V.M., Adam, C., Canal, R., Gaudou, B., Ho, T.V. and Taillandier, P. (2012), Simulation of the emotion dynamics in a group of agents in an evacuation situation. In ‘The first Pacific Rim workshop on Agent-based modeling and simulation of Complex Systems (PRACSYS)’, India, Volume 7057/2012, pp. 604-619.](http://www.springerlink.com/content/c838365603qr7tx0/)
* [Nguyen Vu, Q. A., Canal, R., Gaudou, B., Hassas, S., Armetta, F. (2012), TrustSets - Using trust to detect deceitful agents in a distributed information collecting system. In: Journal of Ambient Intelligence and Humanized Computing, Springer-Verlag, Vol. 3 N. 4, p. 251-263.](http://link.springer.com/article/10.1007%2Fs12652-012-0140-0)

### 2011

* [Taillandier, P., Therond, O. (2011), Use of the Belief Theory to formalize Agent Decision Making Processes : Application to cropping Plan Decision Making. In ’25th European Simulation and Modelling Conference’, Guimaraes, Portugal, pp. 138-142.](https://hal.archives-ouvertes.fr/hal-00688405)
* [Taillandier, P. & Amblard, F. (2011), Cartography of Multi-Agent Model Parameter Space through a reactive Dicotomous Approach. In ’25th European Simulation and Modelling Conference’, Guimaraes, Portugal, pp. 38-42.](https://hal.archives-ouvertes.fr/hal-00688412)
* [Taillandier, P. & Stinckwich, S. (2011), Using the PROMETHEE Multi-Criteria Decision Making Method to Define New Exploration Strategies for Rescue Robots’, IEEE International Symposium on Safety, Security, and Rescue Robotics, Kyoto, Japon, pp. 321 - 326.](http://ieeexplore.ieee.org/xpl/login.jsp?tp=&arnumber=6106747&url=http%3A%2F%2Fieeexplore.ieee.org%2Fxpls%2Fabs_all.jsp%3Farnumber%3D6106747)

### 2010

* [Nguyen Vu, Q.A. , Gaudou, B., Canal, R., Hassas, S. and Armetta, F. (2010), A cluster-based approach for disturbed, spatialized, distributed information gathering systems,  in ‘The first Pacific Rim workshop on Agent-based modeling and simulation of Complex Systems (PRACSYS)’, India, pp. 588-603.](http://www.springerlink.com/content/u02nq35387418q11/)
* [Nguyen, N.D., Taillandier, P., Drogoul, A. and Augier, P. (2010), Inferring Equation-Based Models from Agent-Based Models: A Case Study in Competition Dynamics.In ‘The 13th International Conference on Principles and Practices in Multi-Agent Systems (PRIMA)’, India, Volume 7057/2012, pp. 413-427.](http://www.springerlink.com/content/n23314gm326l4p27/)
* [Amouroux, E., Gaudou, B. Desvaux, S. and Drogoul, A. (2010), O.D.D.: a Promising but Incomplete Formalism For Individual-Based Model Specification. in ‘IEEE International Conference on Computing and Telecommunication Technologies ’(2010 IEEE RIVF'), pp. 1-4.](http://ieeexplore.ieee.org/xpl/login.jsp?tp=&arnumber=5633421&url=http%3A%2F%2Fieeexplore.ieee.org%2Fxpls%2Fabs_all.jsp%3Farnumber%3D5633421)
* [Nguyen, N.D., Phan, T.H.D., Nguyen, T.N.A., Drogoul, A., Zucker, J-D. (2010), Disk Graph-Based Model for Competition Dynamic, in ‘IEEE International Conference on Computing and Telecommunication Technologies ’(2010 IEEE RIVF').](https://www.researchgate.net/publication/274992251_Disk_Graph-Based_Model_a_graph_theoretical_approach_for_linking_agent-based_models_and_dynamical_systems)
* [Nguyen, T.K., Marilleau, N., Ho T.V., El Fallah Seghrouchni, A. (2010), A meta-model for specifying collaborative simulation, Paper to appear in ‘IEEE International Conference on Computing and Telecommunication Technologies ’(2010 IEEE RIVF').](https://ieeexplore.ieee.org/document/5634008)
* [Nguyen Vu, Q.A. , Gaudou, B., Canal, R., Hassas, S. and Armetta, F. (2010), `TrustSets` - Using trust to detect deceitful agents in a distributed information collecting system, Paper to appear in ‘IEEE International Conference on Computing and Telecommunication Technologies ’(2010 IEEE RIVF'), the best student paper award.](http://ieeexplore.ieee.org/xpl/freeabs_all.jsp?arnumber=5633080)
* [Nguyen Vu, Q.A. , Gaudou, B., Canal, R., Hassas, S., Armetta, F. and Stinckwich, S. (2010), Using trust and cluster organisation to improve robot swarm mapping, Paper to appear in ‘Workshop on Robots and Sensors integration in future rescue INformation system ’ (ROSIN 2010).](http://users.info.unicaen.fr/~serge/share/ROSIN10/rosin10_submission_8.pdf)

### 2009

* [Taillandier, P. and Buard, E. (2009), Designing Agent Behaviour in Agent-Based Simulation through participatory method. In ‘The 12th International Conference on Principles and Practices in Multi-Agent Systems (PRIMA)’, Nagoya, Japan, pp. 571--578.](http://www.springerlink.com/content/hu37551467646471/)
* [Taillandier, P. and Chu, T.Q. (2009), Using Participatory Paradigm to Learn Human Behaviour. In ‘International Conference on Knowledge and Systems Engineering’, Ha noi, Viet Nam, pp. 55--60.](http://www.computer.org/portal/web/csdl/doi/10.1109/KSE.2009.33)
* [Gaudou, B., Ho, T.V. and Marilleau, N. (2009), Introduce collaboration in methodologies of modeling and simulation of Complex Systems. In ‘International Conference on Intelligent Networking and Collaborative Systems (INCOS '09)’. Barcelona, pp. 1--8.](http://portal2.acm.org/citation.cfm?id=1681504.1681534&coll=GUIDE&dl=GUIDE&CFID=://www.google.com.vn/search?hl=fr&CFTOKEN=www.google.com.vn/search?hl=fr)
* [Nguyen, T.K., Gaudou B., Ho T.V. and Marilleau N. (2009), Application of PAMS Collaboration Platform to Simulation-Based Researches in Soil Science: The Case of the MIcro-ORganism Project. In ‘IEEE International Conference on Computing and Telecommunication Technologies (IEEE-RIVF 09)’. Da Nang, Viet Nam, pp. 296--303.](http://ieeexplore.ieee.org/Xplore/login.jsp?url=http%3A%2F%2Fieeexplore.ieee.org%2Fiel5%2F5174598%2F5174599%2F05174623.pdf%3Farnumber%3D5174623&authDecision=-203)
* [Nguyen, V.Q., Gaudou B., Canal R., Hassas S. and Armetta F. (2009), Stratégie de communication dans un système de collecte d’information à base d’agents perturbés. In ‘Journées Francophones sur les Systèmes Multi-Agents (JFSMA'09)’.](http://liesp.insa-lyon.fr/v2/?q=fr/node/100911)


### 2008

* [Chu, T.Q., Boucher, A., Drogoul, A., Vo, D.A., Nguyen, H.P. and Zucker, J.D. (2008). Interactive Learning of Expert Criteria for Rescue Simulations. In Pacific Rim International Workshop on Multi-Agents, Ha Noi, Viet Nam, pp. 127--138.](http://www.springerlink.com/content/r83v0125vl0430l1/)
* [Amouroux, E., Desvaux, S. and Drogoul, A. (2008), Towards Virtual Epidemiology: An Agent-Based Approach to the Modeling of H5N1 Propagation and Persistence in North-Vietnam. In Pacific Rim International Workshop on Multi-Agents, Ha Noi, Viet Nam, pp. 26--33.](http://www.springerlink.com/content/v6471t1453k17244/)
